--- a/quizapp/src/App.css
+++ b/quizapp/src/App.css
@@ -1,16 +1,23 @@
+body{
+
+  background-image: url(C:\Users\KPK\Downloads\bitcoin-2007769_1280.jpg);
+ 
+}
+
+
 .App {
   text-align: center;
+ 
 }
 
 .question--- {
   display: flex;
   width: 400px;
   margin: auto;
-  border: 1px solid rgba(0, 0, 0, 0.548);
   justify-content: space-around;
   font-weight: bold;
   padding: 10px;
-  background-color: teal;
+  background-color: rgb(4, 126, 126);
   border-radius: 20px;
   margin-bottom: 10px;
 }
@@ -24,8 +31,10 @@
 
 .answer button{
 
-  background-color: blue;
-  color:white;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+
+  color:black;
+  border-radius:10px;
   padding:8px;
   font-weight: bold;
   cursor:pointer;
@@ -34,7 +43,7 @@
 
 .answer button:hover{
 
-  background-color:rgb(4, 4, 94);
+ background-color: rgb(0, 0, 255);
 }
 
 
