--- a/weatherapp/src/components/Temp.css
+++ b/weatherapp/src/components/Temp.css
@@ -7,11 +7,12 @@
 
 .box{
 width:280px;
-height: 350px;
+height: 337px;
 border: 1px solid rgba(0, 0, 0, 0.034);
 margin: auto;
 border-radius: 20px;
 background-color: #82ccdd;
+border: 1px solid rgba(0, 0, 0, 0.836);
 background-image: url(https://img.freepik.com/free-photo/sky_53876-47159.jpg?w=826&t=st=1690980736~exp=1690981336~hmac=bf585deeef1e7e1229035625944f7c315a96c1fe8a5650e77257b30d923d21a2);
 }
 
