--- a/recipefinder/src/App.css
+++ b/recipefinder/src/App.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
 }
 
+body{
+  background-color: rgb(9, 47, 49);
+}
 h1{
   font-size: 30px;
 }
@@ -14,11 +17,12 @@ h1{
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background-color: #199ce7;
+  background-color: #074061;
   position: fixed;
   top: 0px;
   padding: 2%;
   font-size:2vw;
+  color: rgb(203, 207, 207);
 }
 
 #recipes {
@@ -28,11 +32,12 @@ h1{
   grid-template-columns: repeat(5, 1fr);
   gap: 20px;
   margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 #recipe {
   height: auto;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  background-color: rgb(194, 210, 223);
   text-align: center;
   padding-bottom: 10px;
   line-height: 30px;
@@ -84,6 +89,7 @@ h1{
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     margin-top: 20px;
+    margin-bottom: 50px;
   }
 
   #header {
@@ -109,6 +115,7 @@ h1{
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     margin-top: 20px;
+    margin-bottom: 50px;
   }
 
   #header {
@@ -134,6 +141,8 @@ h1{
     grid-template-columns: repeat(1, 1fr);
     gap: 20px;
     margin-top: 20px;
+    margin-bottom: 50px;
+  
 
 
     #header {
