--- a/weatherapp/src/components/Temp.css
+++ b/weatherapp/src/components/Temp.css
@@ -3,6 +3,10 @@
 
 }
 
+body{
+    background-color: rgb(200, 220, 223);
+}
+
 
 
 .box{
@@ -43,7 +47,7 @@ background-image: url(https://img.freepik.com/free-photo/sky_53876-47159.jpg?w=8
     justify-content: center;
     gap:5px;
     margin-top:30%;
-    font-size: 3rem;
+    font-size: 2.5rem;
     color: rgb(1, 49, 49);
 }
 
