--- a/shoppingmart/src/components/style.css
+++ b/shoppingmart/src/components/style.css
@@ -1,31 +1,60 @@
-.home{
-    display: flex;
+.home {
+  display: flex;
 }
 
-.productContainer{
-    width: 78%;
+.productContainer {
+  width: 78%;
+  height: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: space-between;
+  padding: 20px;
+  flex-wrap: wrap;
+  margin: auto;
+  gap: 20px;
+}
+
+.filters {
+  display: flex;
+  flex-direction: column;
+  background-color: #343a40;
+  color: white;
+  height: 86vh;
+  width: 20%;
+  padding: 20px;
+  margin: 10px;
+}
+
+.filters > span {
+  padding-bottom: 10px;
+}
+.title {
+  font-size: 30px;
+}
+
+#Navbar {
+    width:100%;
+  position: fixed;
+  margin-top: 0px;
+  z-index:1000;
+
+}
+
+.home {
+    border: 1px solid teal;
+}
+
+#innerContainer{
     display: flex;
-    padding: 20px;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    width: 100%;
+    margin-top: 100px;
+}
+
+.buttons{
+    display: flex;
+    width: 80%;
     margin:auto;
-
 }
 
-.filters{
-display: flex;
-flex-direction: column;
-background-color:#343a40;
-color: white;
-height: 86vh;
-width:20%;
-padding:20px;
-margin:10px;
-}
 
-.filters > span{
-    padding-bottom: 20px;
-}
-.title{
-    font-size: 30px;
-}
+
