--- a/recipefinder/src/App.css
+++ b/recipefinder/src/App.css
@@ -50,6 +50,8 @@ h1{
   padding: 3px;
   border-radius: 5px;
   font-weight: 500;
+ padding-left:10px;
+ padding-right: 10px;
 }
 
 #recipe img {
@@ -64,6 +66,7 @@ h1{
   box-sizing: border-box;
   justify-content: center;
   gap: 5px;
+
 }
 
 #form .form-control {
@@ -176,4 +179,17 @@ h1{
       border-radius: 5px;
     }
   }
+}
+
+#spinner{
+  width:100vw;
+  height:400px;
+  display:flex;
+ align-content: center;
+ justify-content: center;
+}
+
+#searchBar{
+padding:5px;
+ 
 }
