--- a/latestshoppingmart/src/components/mart.css
+++ b/latestshoppingmart/src/components/mart.css
@@ -84,13 +84,13 @@
   
   .container{
     width:95%;
-    height:580px;
+    height:auto;
     display:grid;
     grid-template-columns: repeat(4,1fr);
     margin:auto;
     gap:25px;
     margin-top:130px;
-    margin-bottom: 100px
+  margin-bottom: 150px;
   }
   
   .container img{
