--- a/quizapp/src/App.css
+++ b/quizapp/src/App.css
@@ -4,7 +4,11 @@ body{
  
 }
 
-
+h1{
+  color:rgb(206, 204, 204);
+  font-size: 40px;
+  text-decoration: underline;
+}
 .App {
   text-align: center;
  
