--- a/latestshoppingmart/src/components/mart.css
+++ b/latestshoppingmart/src/components/mart.css
@@ -291,6 +291,7 @@
   }
   
   #cart{
+  
     background-color: gray;
     border-radius: 10px;
     text-decoration: none;
@@ -298,11 +299,18 @@
   }
   
   #cart h2{
+    display:flex;
     background-color:rgb(58, 56, 56);
     border-radius: 10px;
     color:white;
     text-decoration: none;
     font-weight: 600;
+    align-items: center;
+  }
+
+
+  .cartIcon{
+    background-color:rgb(58, 56, 56) !important;
   }
   
   
