--- a/namastereactfoodwebsite/src/styles/Body.css
+++ b/namastereactfoodwebsite/src/styles/Body.css
@@ -10,15 +10,20 @@ button {
 .Body {
   width: 95%;
   margin: auto;
+  margin-top: 40px;
   margin-top: 110px;
 }
 
+.bodyHeader h2{
+margin-left: 10%;
+}
 .Body1 {
   display: flex;
   width: 100%;
   height: auto;
   justify-content: space-around;
   align-content: center;
+  margin-top: 40px;
 }
 
 .Search input{
@@ -29,19 +34,21 @@ button {
     padding: 7px;
 }
 .Body2 {
-  width: 90%;
+  width: 80%;
   height: auto;
   margin-top: 20px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   margin: auto;
-  margin-top: 20px;
+  margin-top: 40px;
   gap: 30px;
+  margin-bottom: 50px;
+  box-sizing: border-box;
 }
 
 .resCard {
-   width:100%;
-  height: auto;
+   width:91%;
+   height:345px;
   padding: 15px;
   border-radius: 30px;
   padding: 10px;
@@ -49,18 +56,19 @@ button {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   line-height: 20px;
   background-color:white;
+  color: black !important;
 }
 
 .resCard:hover {
   border: 1px solid rgba(0, 0, 0, 0.342);
-  width:98%;
+  width:85%;
   cursor: pointer;
 
 }
 
 .resCard img {
   width: 100%;
-  height: 180px;
+  height: 150px;
   border-radius: 20px;
   margin: auto;
 }
@@ -87,4 +95,13 @@ button {
   padding: 5px;
   border-radius: 10px;
   padding-left: 8px;
+}
+
+#topRated button{
+  width: 80px;
+  background-color: rgb(85, 82, 82);
+}
+
+#topRated button:hover{
+  background-color: rgb(46, 44, 44); 
 }
