--- a/namastereactfoodwebsite/src/styles/RestroMenu.css
+++ b/namastereactfoodwebsite/src/styles/RestroMenu.css
@@ -1,14 +1,48 @@
 .restroMenu{
-    margin-top: 250px !important;
-    color: black;
-    width:50vw;
+    width: 80%;
     height: auto;
-    padding: 10px;
-    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    gap:20px;
     margin:auto;
-   background-color: white;
-   box-sizing: border-box;
-      
+    margin-top: 120px;
+    margin-bottom: 50px;
+    cursor:pointer;
+}
+
+
+#restMenuCard{
+    width: 100%;
+    height: 230px;
+    text-align:center;
+    background-color: white;
+    border-radius:20px;
+    padding:3px;
+    line-height: 8px;
+}
+
+#restMenuCard:hover{
+    width:96%;
+    margin:auto;
+    border:1px solid rgba(0, 0, 0, 0.425);
+}
+
+
+#restDataMenuImg{
+    width: 100%;
+    height:150px;
+    border-radius: 20px;
+}
+
+#restMenuCard button{
+    width: 70px;
+    height:30px;
+    background-color:rgba(0, 128, 0, 0.911);
+    margin-top:-7px;
+}
+
+#restMenuCard button:hover{
+    background-color:rgb(2, 102, 2); 
 }
 
 
