--- a/namastereactfoodwebsite/src/styles/Body.css
+++ b/namastereactfoodwebsite/src/styles/Body.css
@@ -54,7 +54,7 @@ margin-left: 10%;
   padding: 10px;
   font-size: 10px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  line-height: 20px;
+  line-height: 20px !important;
   background-color:white;
   color: black !important;
 }
