--- a/namastereactfoodwebsite/src/styles/Cart.css
+++ b/namastereactfoodwebsite/src/styles/Cart.css
@@ -1,52 +1,62 @@
 #mainCart {
-  width: 80%;
+  width: 40vw;
   height: auto;
-  display:flex;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
   margin: auto;
   margin-top: 110px;
   margin-bottom: 50px;
- 
+  text-align: center;
+  align-items: center;
+
+  box-sizing: border-box !important;
 }
 
 .cartItems {
-  width: 70%;
+  width: 100%;
   height: auto;
-  align-items: center;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
+  gap: 20px;
+  text-align: center;
+  align-items: center;
   justify-content: center;
   text-align: center;
-  padding: 10px;
+  padding: 10px !important;
   gap: 20px;
-  border-right: 1px solid rgba(0, 0, 0, 0.363);
-  
+  box-sizing: border-box !important;
 }
 
 .cartDetails {
   width: 100%;
   height: auto;
-
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 20px;
   text-align: center;
+  box-sizing: border-box;
 }
 
 #cartCard {
-  width: 70%;
-  height: auto;
+  width: 100%;
+  height: 80px;
+  display: flex;
   padding: 10px;
+  gap: 20px;
   margin: auto;
   border-radius: 30px;
   background-color: white;
-  line-height: 10px;
+  align-items: center !important;
+  align-content: center !important;
+  box-sizing: border-box;
 }
 
 #cartCard button {
   background-color: red;
-
 }
 
-#cartCard button:hover{
-    background-color: rgb(218, 4, 4);
+#cartCard button:hover {
+  background-color: rgb(218, 4, 4);
 }
 
 #cartCard:hover {
@@ -57,9 +67,8 @@
   width: 50%;
   display: flex;
   margin: auto;
-  margin-bottom: 5px;
   justify-content: center;
-  gap: 3px;
+  gap: 7px;
   align-items: center;
 }
 .quantitybtns button {
@@ -75,17 +84,32 @@
   background-color: red !important;
 }
 
-.removeBtn{
-    width:80px;
+.removeBtn {
+  width: 80px;
+
 }
 
-
-.cartValue{
-  width: 30%;
+.cartValue {
+  width: 100%;
+  height: auto;
   text-align: center !important;
   justify-content: center;
+  padding: 10px;
+  background-color: black;
+  color: white;
+  box-sizing: border-box;
 }
 
-.removeBtn:hover{
-background-color: red !important;
+.cartTags {
+  margin: 10px !important;
+}
+
+.removeBtn:hover {
+  background-color: rgb(207, 11, 11) !important;
+}
+
+#cartCard img {
+  height: 77px;
+  width: 80px;
+  margin-top:3.9px;
 }
